-
Bug
-
Resolution: Done
-
P1: Critical
-
5.14
-
None
-
-
89312b2eabc86a9de6892778a458b914c9b2b72c (qt/qtbase/5.14)
qtbase 5.14 9f1948f59b916966ea0ecdf9c7d3473f7685e08e
Ubuntu 16.04.6 with gcc (Ubuntu 5.4.0-6ubuntu1~16.04.12) 5.4.0 20160609
config.opt: -developer-build -opensource -confirm-license -nomake examples -nomake tests -verbose
make[2]: Entering directory '/home/liangqi/qt/qt5-build/qtbase/src/widgets' g++ -c -include .pch/Qt5Widgets -pipe -g -std=c++1y -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -Wextra -Wvla -Wdate-time -Werror -Wno-error=cpp -Wno-error=deprecated-declarations -Wno-error=strict-overflow -D_REENTRANT -fPIC -DQT_NO_LINKED_LIST -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_USING_NAMESPACE -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_WIDGETS_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_GUI_LIB -DQT_CORE_LIB -I/home/liangqi/qt/qt5/qtbase/src/widgets -I. -I/home/liangqi/qt/qt5/qtbase/src/widgets/dialogs -I../../include -I../../include/QtWidgets -I../../include/QtWidgets/5.14.1 -I../../include/QtWidgets/5.14.1/QtWidgets -I.tracegen -I.uic -I../../include/QtGui/5.14.1 -I../../include/QtGui/5.14.1/QtGui -I../../include/QtCore/5.14.1 -I../../include/QtCore/5.14.1/QtCore -I../../include/QtGui -I../../include/QtCore -I.moc -isystem /usr/include/libdrm -I/home/liangqi/qt/qt5/qtbase/mkspecs/linux-g++ -o .obj/qtablewidget.o /home/liangqi/qt/qt5/qtbase/src/widgets/itemviews/qtablewidget.cpp /home/liangqi/qt/qt5/qtbase/src/widgets/itemviews/qtablewidget.cpp:926:90: error: unused parameter ‘other’ [-Werror=unused-parameter] QTableWidgetSelectionRange::QTableWidgetSelectionRange(const QTableWidgetSelectionRange &other) = default; ^ /home/liangqi/qt/qt5/qtbase/src/widgets/itemviews/qtablewidget.cpp:926:99: note: synthesized method ‘QTableWidgetSelectionRange::QTableWidgetSelectionRange(const QTableWidgetSelectionRange&)’ first required here QTableWidgetSelectionRange::QTableWidgetSelectionRange(const QTableWidgetSelectionRange &other) = default; ^ cc1plus: all warnings being treated as errors
| For Gerrit Dashboard: QTBUG-81465 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 286949,2 | Remove unused parameters from default-synthesized members | 5.14 | qt/qtbase | Status: MERGED | +2 | 0 |